--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -8,7 +8,7 @@
   with problems to people who can help them solve those problems.
   Citizens can suggest problems to be fixed, ways they can help, things
   they are concerned about, money to help solve problems, or expertise
-  to help solve problems.
+  to help solve problems. <a href="/about">Learn more...</a>
   </p>
   <p>
 
@@ -20,31 +20,17 @@
 </div>
 
 <ul class="event-list">
+  <%= Enum.map @problems, fn(problem) -> %> 
   <li>
     <div class="title">
-      I cannot auto-renew my bus pass
+      <%= problem.title %>
     </div>
     <p class="description">
-    The MCTS mCard online site requires me to remember to come 
-    back to the site at the end of each month. I always get stuck
-    at the bus stop once every month because I forgot to renew my pass,
-    and it takes 24 hours to process.
+      <%= problem.description %>
     </p>
-    <a class="btn btn-primary" href="/problem">I can help</a>
-    <a class="btn btn-default" href="/problem">Learn more</a>
+    <a class="btn btn-primary" href="/problem/<%= problem.id %>#help">I can help</a>
+    <a class="btn btn-default" href="/problem/<%= problem.id %>">Learn more</a>
   </li>
-  <li>
-    <div class="title">
-      Milwaukee city government is behind the technology curve
-    </div>
-    <p class="description">
-    Most of the online services offered by the City of Milwaukee are 
-    outdated or poor in quality. They often do not offer opportunity
-    to build useful tools on top of existing city services. City government
-    should provide a digital 
-    </p>
-    <a class="btn btn-primary" href="/problem">I can help</a>
-    <a class="btn btn-default" href="/problem">Learn more</a>
-  </li>
+  <% end %>
 </ul>
 
