base page layouts

--- a/web/templates/page/problem.html.eex
+++ b/web/templates/page/problem.html.eex
@@ -27,6 +27,7 @@
     </div>
   </div>
   <div class="pledge section">
+    <a name="help"></a>
     <label for="pledge">Can you help?</label>
     <form>
       <div class="form-group">
