--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -6,7 +6,10 @@ body {
 }
 
 .btn {
-  border-radius: 0px;
+  border-radius: 2px;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
 
   &.btn-primary {
     background-color: #00A7E0;
@@ -49,6 +52,7 @@ body {
 
   ul {
     list-style: none;
+    padding: 0px;
 
     li { 
       display: inline-block;
@@ -68,4 +72,47 @@ body {
 .navbar-toggle {
   border-color: #FFF!important;
   border-radius: 0px;
+}
+
+.content-page {
+  max-width: 600px;
+  margin: auto;
+  margin-top: 8rem;
+
+  .title {
+    margin-top: 6rem;
+    text-align: center;
+    margin-bottom: 4rem;
+  }
+
+  h3.title {
+    margin-bottom: 3rem;
+  }
+
+  li {
+    margin-bottom: 1.5rem;
+  }
+
+  input, textarea {
+    border-radius: 2px;
+    resize: none;
+    overflow: hidden;
+  }
+  
+  textarea {
+    min-height: 250px;
+  }
+
+  .required {
+    label:after {
+      content: '*';
+      position: relative;
+      left: 5px;
+      top: -5px;
+      font-size: 1rem;
+      color: #d9534f;
+
+    }
+  }
+
 }
