attempt to fix the weird loading of the logo

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -30,6 +30,7 @@ body {
 
     img {
       max-width: 22px;
+      min-width: 22px;
       display: inline-block;
       position: relative;
       top: -3px;
