basic vote stuff, added merriweather font

--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -10,9 +10,11 @@
     <title>Milwaukee Digital Public Works</title>
 
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
   </head>
 
   <body>
+
 
     <header class="header navbar navbar-default navbar-fixed-top">
       <div class="container">
