--- a/web/templates/page/problem.html.eex
+++ b/web/templates/page/problem.html.eex
@@ -36,15 +36,21 @@
   <div class="pledge section">
     <a name="help"></a>
     <label for="pledge">Can you help?</label>
-    <form>
+
+    <form method="POST" action="/form-submit">
+
+      <input type="hidden" id="_csrf_token"  name="_csrf_token" value="<%= get_csrf_token() %>">
+      <input type="hidden" name="form_key" value="problem-<%= @problem.id %>">
+      <input type="hidden" name="_redirect" value="/problem-thank-you">
+
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Your name">
+        <input type="text" name="answers[Your name:]" class="form-control" placeholder="Your name">
       </div>
       <div class="form-group">
-        <input type="email" class="form-control" placeholder="Your email address">
+        <input type="email" name="answers[Your email:]" class="form-control" placeholder="Your email address">
       </div>
       <div class="form-group">
-        <textarea class="form-control" autoresize placeholder="How can you help?"></textarea>
+        <textarea class="form-control" name="answers[How can you help?]" autoresize placeholder="How can you help?"></textarea>
       </div>
       <button class="btn btn-primary">Sign up to help!</button>
     </form>
