add support for meta tags

--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Milwaukee Digital Public Works</title>
+    <meta name="keywords" content="<%= @meta[:keywords] %>">
+    <meta name="description" content="<%= @meta[:description] %>">
+    <title><%= @meta[:title] %></title>
+
+    <!-- Facebook meta tags -->
 
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
