fix homepage text and twitter meta tags

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -4,7 +4,7 @@
 
 <div class="explainer">
   <p>
-  The Milwaukee Digital Public Service department connects people
+  The Milwaukee Digital Public Works project connects people
   with problems to people who can help them solve those problems.
   Citizens can suggest problems to be fixed, ways they can help, things
   they are concerned about, money to help solve problems, or expertise
