--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -13,6 +13,10 @@
     <%= if @meta[:facebook_title] do %><meta property="og:title" content="<%= @meta[:facebook_title] %>"><% end %>
     <%= if @meta[:facebook_description] do %><meta property="og:description" content="<%= @meta[:facebook_description] %>"><% end %>
     <meta property="og:site_name" content="Digital Public Works">
+    
+    <!-- Twitter meta tags -->
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:site" content="@digipublicworks">
 
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
