--- a/web/templates/admin/responses.html.eex
+++ b/web/templates/admin/responses.html.eex
@@ -7,7 +7,7 @@
 
   <ul style="margin-top: 30px;">
     <%= Enum.map @responses, fn(response) -> %>
-      <li><a href="/response/<%= response.id %>"><%= response.inserted_at %></a></li>
+      <li><a href="/admin/response/<%= response.id %>"><%= response.inserted_at %></a></li>
     <% end %>
   </ul>
 </div>
