--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -4,14 +4,14 @@
 
 <div class="explainer">
   <p>
-  The Milwaukee Digital Public Works project connects people
-  with problems to people who can help them solve those problems.
+  The Milwaukee Digital Public Works project is a non-governmental community which 
+  connects people with problems to people who can help them solve those problems.
   Citizens can suggest problems to be fixed, ways they can help, things
   they are concerned about, money to help solve problems, or expertise
-  to help solve problems. <a href="/about">Learn more...</a>
+  to help solve problems. 
+  <a href="/about">Learn more...</a>
   </p>
   <p>
-
   </p>
 </div>
 
