--- a/web/templates/page/thank-you-problem.html.eex
+++ b/web/templates/page/thank-you-problem.html.eex
@@ -5,4 +5,27 @@
   to discuss details. If you have any questions in the meantime,
   <a href="/contact">send us an email.</a>
   </p>
+  <%= if is_nil(@current_user) do %>
+    <p>
+    To get one step ahead of the game, create an account so
+    you can hit the ground running when the project is ready to use your skills.
+    </p>
+    <hr />
+    <form method="POST" action="/register">
+      <input type="hidden" id="_csrf_token"  name="_csrf_token" value="<%= get_csrf_token() %>">
+      <div class="form-group">
+        <label for="email">Email address</label>
+        <input type="email" name="email" id="email" required class="form-control" <%= if @conn.assigns[:email] do %>value="<%= @conn.assigns[:email] %>"<% end %>>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" required class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="password-confirm">Re-type password</label>
+        <input type="password" name="password-confirm" id="password-confirm" required class="form-control">
+      </div>
+      <input class="btn btn-primary" type="submit" value="Register">
+    </form>
+  <% end %>
 </div>
