fix styling on homepage markdown

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -25,9 +25,9 @@
     <div class="title">
       <%= problem.title %>
     </div>
-    <p class="description">
+    <div class="description">
       <%= raw Earmark.as_html!(problem.description) %>
-    </p>
+    </div>
     <a class="btn btn-primary" href="/problem/<%= problem.id %>#help">I can help</a>
     <a class="btn btn-default" href="/problem/<%= problem.id %>">Learn more</a>
   </li>
