only show the first paragraph of the description

--- a/web/static/css/homepage.scss
+++ b/web/static/css/homepage.scss
@@ -38,6 +38,12 @@
       margin-top: 1rem;
       margin-bottom: 2rem;
       font-size: 1.2rem;
+
+      p { 
+        display: none;
+        &:first-of-type {
+          display: block;
+        }
     }
   }
 }
